--- a/CrowdShield/package.json
+++ b/CrowdShield/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
     "firebase": "^11.9.1",
+    "framer-motion": "^12.19.1",
     "leaflet": "^1.9.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
